Enhance timeline layout and styling in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <!-- Header / Hero Section -->
-  <header>
+  <header class="hero">
     <div>
       <!-- Ask Copilot to teach you about `.svg`. 🙂 You'll need to resize the logo with CSS. -->
       <img src="img/intel-header-logo.svg" alt="Intel Logo" />
@@ -28,114 +28,163 @@
   </header>
 
   <!-- Timeline Cards Section -->
-  <section>
+  <section class="timeline">
+    <div class="timeline-inner">
+      <article class="card">
+        <div class="card-visual bg-1">
+          <h2>1968</h2>
+          <h3>Intel Founded</h3>
+        </div>
+        <div class="card-body">
+          <p>
+            Robert Noyce and Gordon Moore rename the newly formed company
+            NM Electronics to Intel Corporation, laying the foundation for
+            decades of technological innovation.
+          </p>
+        </div>
+      </article>
+      <div class="connector chips chips-1" aria-hidden="true">
+        <span class="chip" aria-hidden="true"></span>
+      </div>
 
-    <!-- Card 1: 1968 -->
-    <div>
-      <h2>1968</h2>
-      <h3>Intel Founded</h3>
-      <!-- Add image -->
-      <p>
-        Robert Noyce and Gordon Moore rename the newly formed company 
-        NM Electronics to Intel Corporation, laying the foundation for 
-        decades of technological innovation.
-      </p>
-    </div>
+      <article class="card">
+        <div class="card-visual bg-2">
+          <h2>1971</h2>
+          <h3>First Microprocessor</h3>
+        </div>
+        <div class="card-body">
+          <p>
+            Intel debuts the 4004, the world's first commercial microprocessor,
+            igniting the microprocessor revolution and propelling the future
+            of computing devices.
+          </p>
+        </div>
+      </article>
+      <div class="connector chips chips-1" aria-hidden="true">
+        <span class="chip" aria-hidden="true"></span>
+      </div>
 
-    <!-- Card 2: 1971 -->
-    <div>
-      <h2>1971</h2>
-      <h3>First Microprocessor</h3>
-      <!-- Add image -->
-      <p>
-        Intel debuts the 4004, the world's first commercial microprocessor, 
-        igniting the microprocessor revolution and propelling the future 
-        of computing devices.
-      </p>
-    </div>
+      <article class="card">
+        <div class="card-visual bg-3">
+          <h2>1978</h2>
+          <h3>8086 Processor</h3>
+        </div>
+        <div class="card-body">
+          <p>
+            Launch of the 8086 processor, establishing the x86 architecture
+            that drives countless PCs and servers in the modern era.
+          </p>
+        </div>
+      </article>
+      <div class="connector chips chips-1" aria-hidden="true">
+        <span class="chip" aria-hidden="true"></span>
+      </div>
 
-    <!-- Card 3: 1978 -->
-    <div>
-      <h2>1978</h2>
-      <h3>8086 Processor</h3>
-      <!-- Add image -->
-      <p>
-        Launch of the 8086 processor, establishing the x86 architecture 
-        that drives countless PCs and servers in the modern era.
-      </p>
-    </div>
+      <article class="card">
+        <div class="card-visual bg-4">
+          <h2>1985</h2>
+          <h3>386 Processor</h3>
+        </div>
+        <div class="card-body">
+          <p>
+            Intel introduces the 386 processor with 32-bit architecture,
+            ushering in a new era of performance and multitasking for
+            personal computers.
+          </p>
+        </div>
+      </article>
+      <div class="connector chips chips-1" aria-hidden="true">
+        <span class="chip" aria-hidden="true"></span>
+      </div>
 
-    <!-- Card 4: 1985 -->
-    <div>
-      <h2>1985</h2>
-      <h3>386 Processor</h3>
-      <!-- Add image -->
-      <p>
-        Intel introduces the 386 processor with 32-bit architecture, 
-        ushering in a new era of performance and multitasking for 
-        personal computers.
-      </p>
-    </div>
+      <article class="card">
+        <div class="card-visual bg-1">
+          <h2>2006</h2>
+          <h3>Peak GHG Emissions</h3>
+        </div>
+        <div class="card-body">
+          <p>
+            This year marks Intel's highest annual greenhouse gas emissions
+            for operations. Over subsequent years, Intel invests heavily in
+            chemical abatement, renewable energy, and energy-efficient
+            manufacturing to reverse this trend.
+          </p>
+        </div>
+      </article>
+      <div class="connector chips chips-1" aria-hidden="true">
+        <span class="chip" aria-hidden="true"></span>
+      </div>
 
-    <!-- Card 5: 2006 -->
-    <div>
-      <h2>2006</h2>
-      <h3>Peak GHG Emissions</h3>
-      <!-- Add image -->
-      <p>
-        This year marks Intel's highest annual greenhouse gas emissions 
-        for operations. Over subsequent years, Intel invests heavily in 
-        chemical abatement, renewable energy, and energy-efficient 
-        manufacturing to reverse this trend.
-      </p>
-    </div>
+      <article class="card">
+        <div class="card-visual bg-2">
+          <h2>2020</h2>
+          <h3>RISE Strategy</h3>
+        </div>
+        <div class="card-body">
+          <p>
+            Intel launches its RISE (Responsible, Inclusive, Sustainable,
+            Enabling) strategy and 2030 goals, aiming to drive industry-wide
+            progress on climate action, water stewardship, and waste reduction.
+          </p>
+        </div>
+      </article>
+      <div class="connector chips chips-3" aria-hidden="true">
+        <span class="chip" aria-hidden="true"></span>
+        <span class="chip" aria-hidden="true"></span>
+        <span class="chip" aria-hidden="true"></span>
+      </div>
 
-    <!-- Card 6: 2020 -->
-    <div>
-      <h2>2020</h2>
-      <h3>RISE Strategy</h3>
-      <!-- Add image -->
-      <p>
-        Intel launches its RISE (Responsible, Inclusive, Sustainable, 
-        Enabling) strategy and 2030 goals, aiming to drive industry-wide 
-        progress on climate action, water stewardship, and waste reduction.
-      </p>
-    </div>
+      <article class="card">
+        <div class="card-visual bg-3">
+          <h2>2022</h2>
+          <h3>Net-Zero By 2040</h3>
+        </div>
+        <div class="card-body">
+          <p>
+            Intel announces its commitment to achieve net-zero greenhouse
+            gas emissions (Scope 1 and 2) across its global operations
+            by 2040, building on years of environmental initiatives.
+          </p>
+        </div>
+      </article>
+      <div class="connector chips chips-3" aria-hidden="true">
+        <span class="chip" aria-hidden="true"></span>
+        <span class="chip" aria-hidden="true"></span>
+        <span class="chip" aria-hidden="true"></span>
+      </div>
 
-    <!-- Card 7: 2022 -->
-    <div>
-      <h2>2022</h2>
-      <h3>Net-Zero By 2040</h3>
-      <!-- Add image -->
-      <p>
-        Intel announces its commitment to achieve net-zero greenhouse 
-        gas emissions (Scope 1 and 2) across its global operations 
-        by 2040, building on years of environmental initiatives.
-      </p>
-    </div>
+      <article class="card">
+        <div class="card-visual bg-4">
+          <h2>2023</h2>
+          <h3>Renewable Electricity</h3>
+        </div>
+        <div class="card-body">
+          <p>
+            The company achieves 99% renewable electricity usage worldwide,
+            helping to drastically lower carbon emissions and driving progress
+            toward Intel's long-term sustainability goals.
+          </p>
+        </div>
+      </article>
+      <div class="connector chips chips-3" aria-hidden="true">
+        <span class="chip" aria-hidden="true"></span>
+        <span class="chip" aria-hidden="true"></span>
+        <span class="chip" aria-hidden="true"></span>
+      </div>
 
-    <!-- Card 8: 2023 -->
-    <div>
-      <h2>2023</h2>
-      <h3>Renewable Electricity</h3>
-      <!-- Add image -->
-      <p>
-        The company achieves 99% renewable electricity usage worldwide, 
-        helping to drastically lower carbon emissions and driving progress 
-        toward Intel's long-term sustainability goals.
-      </p>
-    </div>
-
-    <!-- Card 9: 2024 -->
-    <div>
-      <h2>2024</h2>
-      <h3>Sustainability Summit</h3>
-      <!-- Add image -->
-      <p>
-        Intel hosts its first Sustainability Summit, uniting suppliers, 
-        government officials, and industry leaders to collaborate on 
-        next-generation sustainable semiconductor manufacturing.
-      </p>
+      <article class="card">
+        <div class="card-visual bg-1">
+          <h2>2024</h2>
+          <h3>Sustainability Summit</h3>
+        </div>
+        <div class="card-body">
+          <p>
+            Intel hosts its first Sustainability Summit, uniting suppliers,
+            government officials, and industry leaders to collaborate on
+            next-generation sustainable semiconductor manufacturing.
+          </p>
+        </div>
+      </article>
     </div>
   </section>
   <p>Scroll to view timeline | Hover over cards to learn more!</p>
